still correcting accessibility contrasting color

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ nav ul li:nth-child(2) {
 
 nav ul li:nth-child(2) a {
     background-color: #424040;
-    color: #000;
+    color: #42af7f;
     text-decoration: none;
 }
 
